[DevTools] Compatibility with older STL libraries

One of the clients need to support Mac OS X version 10.7, which means that Clang compiler that support C++11 is used but the application is linked against pre-C++11 libstdc++.

Following changes were made:
1. std::unique_ptr got a new copy ctor that take a const ref - this
   allows for the pointer to be put into STL containers that do not
   support rvalue references.
2. cbegin/cend functions are no longer used.
3. Paths were changed and conditional macros were adjusted.

BUG=628794
R=pfeldman@chromium.org

Review-Url: https://codereview.chromium.org/2150333003
Cr-Commit-Position: refs/heads/master@{#406103}

Former-commit-id: 851972d6da7463c353d712d2cb6c1ec23fa6c4fe